@@ -17,6 +17,24 @@
     <description>A SOAP service based on CXF</description>
 
     <properties>
+        <!-- Add visibility required by the tests exclusively -->
+        <surefire.args>
+            -XX:+IgnoreUnrecognizedVMOptions
+            --add-exports=org.mule.service.soap/org.mule.service.soap=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.config.builders=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.context=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.serialization=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.registry=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.security.tls=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.transformer=ALL-UNNAMED
+            --add-opens=org.mule.service.soap/org.mule.service.soap.service=java.xml.bind
+            --add-exports=org.mule.service.soap/org.mule.service.soap.service=org.apache.cxf.core
+            --add-exports=org.mule.service.soap/org.mule.service.soap.service=org.apache.wss4j.dom
+            --add-exports=org.mule.service.soap/org.mule.service.soap.service=ALL-UNNAMED
+            ${surefire.args.base}
+        </surefire.args>
+
         <javaModuleName>org.mule.service.soap</javaModuleName>
         <dom4jVersion>2.1.3</dom4jVersion>
         <cxfVersion>3.5.5</cxfVersion>
@@ -29,7 +47,7 @@
         <javax.jws-api.version>1.1</javax.jws-api.version>
         <xml.messaging.saaj.version>1.5.3</xml.messaging.saaj.version>
         <formatterConfigPath>formatter.xml</formatterConfigPath>
-        <wsdlParserVersion>1.1.6</wsdlParserVersion>
+        <wsdlParserVersion>1.1.7-SNAPSHOT</wsdlParserVersion>
         <woodstoxCoreVersion>6.4.0</woodstoxCoreVersion>
     </properties>
 
@@ -97,6 +115,11 @@
                     <groupId>org.apache.geronimo.specs</groupId>
                     <artifactId>geronimo-jta_1.1_spec</artifactId>
                 </exclusion>
+                <!-- ensure the fork of this project is used -->
+                <exclusion>
+                    <groupId>wsdl4j</groupId>
+                    <artifactId>wsdl4j</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -150,6 +173,11 @@
                 <exclusion>
                     <groupId>org.apache.geronimo.specs</groupId>
                     <artifactId>geronimo-jta_1.1_spec</artifactId>
+                </exclusion>
+                <!-- ensure the fork of this project is used -->
+                <exclusion>
+                    <groupId>wsdl4j</groupId>
+                    <artifactId>wsdl4j</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
